--- a/Week2/Examples/Example04_GridView/app/src/main/res/layout/book_item.xml
+++ b/Week2/Examples/Example04_GridView/app/src/main/res/layout/book_item.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/iv_cover_art"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
+            android:layout_width="160dp"
+            android:layout_height="320dp"
+            android:scaleType="centerInside"
             tools:src="@drawable/abc"/>
         <ImageView
             android:id="@+id/iv_favourite"
