--- a/Week2/Examples/Example06_RecyclerView/app/src/main/res/layout/ll_mock.xml
+++ b/Week2/Examples/Example06_RecyclerView/app/src/main/res/layout/ll_mock.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
-    <TextView
-        android:id="@+id/tv_name"
-        android:textColor="@color/purple_700"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="4dp"
+    android:background="@color/white">
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:textStyle="bold"
-        tools:text="Sample name" />
+        android:background="?attr/selectableItemBackground"
+        android:padding="8dp">
+        <TextView
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:id="@+id/tv_name"
+            android:textColor="@color/purple_700"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:textStyle="bold"
+            tools:text="Sample name" />
 
-    <TextView
-        android:id="@+id/tv_value"
-        android:textColor="@color/purple_200"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="12345"/>
+        <TextView
+            android:id="@+id/tv_value"
+            android:textColor="@color/purple_200"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            tools:text="12345"/>
 
 
-</LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
