--- a/Week2/Task1_1/app/src/main/res/layout/activity_main.xml
+++ b/Week2/Task1_1/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fl_main_container"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-</FrameLayout>
+    <include
+        android:id="@+id/tb_toolbar"
+        layout="@layout/toolbar"/>
+
+</LinearLayout>
